--- a/app/src/main/res/layout/update_number_fragment_layout.xml
+++ b/app/src/main/res/layout/update_number_fragment_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <EditText
-        android:id="@+id/number"
+        android:id="@+id/number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
